add: Register Page and complete Sign In page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,3 +34,10 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer utilities {
+  .group:hover u {
+    text-decoration-color: transparent;
+  }
+}
+
